--- a/<body>.html
+++ b/<body>.html
@@ -1,4 +1,6 @@
-<body>
+<html>
+
+ <body>
   <div id="root"></div>
   <script src="https://unpkg.com/react@16.12.0/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@16.12.0/umd/react-dom.development.js"></script>
@@ -121,4 +123,5 @@
 
     ReactDOM.render(<App />, document.getElementById("root"));
   </script>
-</body>
+ </body>
+</html>
