added same id for the lable and the input - good for accessibility and the app

--- a/<body>.html
+++ b/<body>.html
@@ -19,8 +19,8 @@
         return (
           <form onSubmit={handleSubmit}>
             <div>
-              <label> Username </label>
-              <input type="text" />
+              <label htmlFor="userNameInput"> Username </label>
+              <input id="userNameInput" type="text" />
             </div>
             <button type="submit">Submit</button>
           </form>
