--- a/<body>.html
+++ b/<body>.html
@@ -8,13 +8,14 @@
       function UsernameForm() {
         function handleSubmit(event) {
           event.preventDefault();
-        // these two methodsa are not perfect because if you have more then 1 form it will be confused:
-        // const userName = document.querySelector('input').value 
-        // or
-        // const userName =event.target.elements[0].value
+          // these two methodsa are not perfect because if you have more then 1 form it will be confused:
+          // const userName = document.querySelector('input').value
+          // or
+          // const userName =event.target.elements[0].value
 
-        
-          alert(`You enered: ${userName}`)
+          const userName = event.target.elements.userNameInput.value;
+          
+          alert(`You enered: ${userName}`);
         }
         return (
           <form onSubmit={handleSubmit}>
