--- a/<body>.html
+++ b/<body>.html
@@ -6,6 +6,7 @@
     <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
     <script type="text/babel">
       function UsernameForm() {
+        const userNameInputRef = React.useRef()
         function handleSubmit(event) {
           event.preventDefault();
           // these two methodsa are not perfect because if you have more then 1 form it will be confused:
@@ -13,7 +14,8 @@
           // or
           // const userName =event.target.elements[0].value
 
-          const userName = event.target.elements.userNameInput.value;
+          const userName = userNameInputRef.current.value
+        //   const userName = event.target.elements.userNameInput.value;
           
           alert(`You enered: ${userName}`);
         }
@@ -21,7 +23,7 @@
           <form onSubmit={handleSubmit}>
             <div>
               <label htmlFor="userNameInput"> Username </label>
-              <input id="userNameInput" type="text" />
+              <input ref={userNameInputRef} id="userNameInput" type="text" />
             </div>
             <button type="submit">Submit</button>
           </form>
