--- a/<body>.html
+++ b/<body>.html
@@ -9,13 +9,13 @@
         const userNameInputRef = React.useRef()
         function handleSubmit(event) {
           event.preventDefault();
-          // these two methodsa are not perfect because if you have more then 1 form it will be confused:
-          // const userName = document.querySelector('input').value
+          // these two methodsa are not perfect because if you have more then 1 form it will be confused if you change the order of forms:
+          // const userName = document.querySelector('input').value // not use this
           // or
-          // const userName =event.target.elements[0].value
+          // const userName =event.target.elements[0].value // not use this
 
           const userName = userNameInputRef.current.value
-        //   const userName = event.target.elements.userNameInput.value;
+        //   const userName = event.target.elements.userNameInput.value; // can use this instead of ref
           
           alert(`You enered: ${userName}`);
         }
