--- a/React-dynamic-form.html
+++ b/React-dynamic-form.html
@@ -7,6 +7,8 @@
     <script type="text/babel">
       function UsernameForm() {
         const [userName, setUserName] = React.useState("");
+        const isLowerCase = userName === userName.toLowerCase()
+        const errorCase = isLowerCase ? null : "Please switch to lower case"
         function handleSubmit(event) {
           event.preventDefault();
           alert(`You enered: ${userName}`);
@@ -24,6 +26,7 @@
                 onChange={handleChange}
               />
             </div>
+            <div style={{color: 'red'}}>{errorCase}</div>
             <button type="submit">Submit</button>
           </form>
         );
