--- a/React-dynamic-form.html
+++ b/React-dynamic-form.html
@@ -27,7 +27,7 @@
               />
             </div>
             <div style={{color: 'red'}}>{errorCase}</div>
-            <button type="submit">Submit</button>
+            <button disabled={Boolean(errorCase)} type="submit">Submit</button>
           </form>
         );
       }
