control the state of the input now, not React, improving UX

--- a/React-controling-form.html
+++ b/React-controling-form.html
@@ -24,6 +24,7 @@
                 id="userNameInput"
                 type="text"
                 onChange={handleChange}
+                value={userName} //meaning that we control the state of the input now, not React
               />
             </div>
             <div style={{color: 'red'}}>{errorCase}</div>
